@@ -1,4 +1,5 @@
 Sat 23 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Add syntax highlight support for code block
 	* Refactor HTML rendiring
 
 Mon 18 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
